# icelandic-saga-companion

./: .gitignore  README.md  pyproject.toml
src/saga_companion/: __init__.py  canonicalize.py  schemas.py
src/saga_companion/benchmark/: __init__.py  draft.py  fixtures.py  scoring.py
src/saga_companion/companion/: __init__.py
src/saga_companion/extract/: __init__.py  adapters.py  openai_compatible.py  parser.py  prompts.py  providers.py  runner.py  schemas.py
src/saga_companion/graph/: __init__.py
src/saga_companion/ingest/: __init__.py  chunk_passages.py  load_sagas.py  load_xml.py  pipeline.py  split_chapters.py  xml_pipeline.py
src/saga_companion/retrieval/: __init__.py
tests/: test_benchmark_draft.py  test_benchmark_fixtures.py  test_benchmark_scoring.py  test_canonicalize.py  test_chunk_passages.py  test_draft_real_benchmark_fixture.py  test_extract_adapters.py  test_extract_parser.py  test_extract_prompts.py  test_extract_providers.py  test_extract_runner.py  test_extract_schemas.py  test_ingest_pipeline.py  test_load_sagas.py  test_load_xml.py  test_manual_gpt_extraction.py  test_openai_compatible_provider.py  test_run_openai_compatible_benchmark.py  test_schemas.py  test_smoke.py  test_smoke_openai_compatible_extraction.py  test_split_chapters.py  test_xml_pipeline.py
tests/fixtures/benchmark/: egils_saga_real_extraction_benchmark.json  tiny_extraction_benchmark.json
tools/: draft_real_benchmark_fixture.py  manual_gpt_extraction.py  run_openai_compatible_benchmark.py  smoke_openai_compatible_extraction.py
