[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "icelandic-saga-companion"
version = "0.1.0"
description = "A graph-backed AI companion for Icelandic sagas."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
extend-exclude = ["notebooks/legacy_capstone.ipynb"]
